{
  "version": 4,
  "terraform_version": "1.6.2",
  "serial": 223,
  "lineage": "85d102af-27a8-f85b-1383-4ddbae3fbcb0",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_firewall_policy",
      "name": "azfw_hub_policy",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_learn_private_ranges_enabled": false,
            "base_policy_id": "",
            "child_policies": [],
            "dns": [],
            "explicit_proxy": [],
            "firewalls": [
              "/subscriptions/42edd95d-ae8d-41c1-ac55-40bf336687b4/resourceGroups/tf-deploy-hub-rg/providers/Microsoft.Network/azureFirewalls/azfw-hub"
            ],
            "id": "/subscriptions/42edd95d-ae8d-41c1-ac55-40bf336687b4/resourceGroups/tf-deploy-hub-rg/providers/Microsoft.Network/firewallPolicies/azfw-hub-policy",
            "identity": [],
            "insights": [],
            "intrusion_detection": [],
            "location": "japaneast",
            "name": "azfw-hub-policy",
            "private_ip_ranges": [],
            "resource_group_name": "tf-deploy-hub-rg",
            "rule_collection_groups": [
              "/subscriptions/42edd95d-ae8d-41c1-ac55-40bf336687b4/resourceGroups/tf-deploy-hub-rg/providers/Microsoft.Network/firewallPolicies/azfw-hub-policy/ruleCollectionGroups/DefaultNetworkRuleCollectionGroup",
              "/subscriptions/42edd95d-ae8d-41c1-ac55-40bf336687b4/resourceGroups/tf-deploy-hub-rg/providers/Microsoft.Network/firewallPolicies/azfw-hub-policy/ruleCollectionGroups/DefaultDnatRuleCollectionGroup"
            ],
            "sku": "Standard",
            "sql_redirect_allowed": null,
            "tags": {},
            "threat_intelligence_allowlist": [],
            "threat_intelligence_mode": "Alert",
            "timeouts": null,
            "tls_certificate": []
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.rg_hub"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_firewall_policy_rule_collection_group",
      "name": "azfw_natrule_collection",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "application_rule_collection": [],
            "firewall_policy_id": "/subscriptions/42edd95d-ae8d-41c1-ac55-40bf336687b4/resourceGroups/tf-deploy-hub-rg/providers/Microsoft.Network/firewallPolicies/azfw-hub-policy",
            "id": "/subscriptions/42edd95d-ae8d-41c1-ac55-40bf336687b4/resourceGroups/tf-deploy-hub-rg/providers/Microsoft.Network/firewallPolicies/azfw-hub-policy/ruleCollectionGroups/DefaultDnatRuleCollectionGroup",
            "name": "DefaultDnatRuleCollectionGroup",
            "nat_rule_collection": [
              {
                "action": "Dnat",
                "name": "DefaultDnatRuleCollection",
                "priority": 200,
                "rule": [
                  {
                    "description": "",
                    "destination_address": "20.222.17.98",
                    "destination_ports": [
                      "22"
                    ],
                    "name": "nat-jumpbox",
                    "protocols": [
                      "TCP"
                    ],
                    "source_addresses": [
                      "*"
                    ],
                    "source_ip_groups": [],
                    "translated_address": "10.0.100.4",
                    "translated_fqdn": "",
                    "translated_port": 22
                  }
                ]
              }
            ],
            "network_rule_collection": [],
            "priority": 200,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_firewall_policy.azfw_hub_policy",
            "azurerm_network_interface.vm_jumpbox_nic",
            "azurerm_public_ip.azfw_hub_pip",
            "azurerm_resource_group.rg_hub",
            "azurerm_subnet.hub_subnets",
            "azurerm_virtual_network.hub_vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_firewall_policy_rule_collection_group",
      "name": "azfw_netrule_collection",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "application_rule_collection": [],
            "firewall_policy_id": "/subscriptions/42edd95d-ae8d-41c1-ac55-40bf336687b4/resourceGroups/tf-deploy-hub-rg/providers/Microsoft.Network/firewallPolicies/azfw-hub-policy",
            "id": "/subscriptions/42edd95d-ae8d-41c1-ac55-40bf336687b4/resourceGroups/tf-deploy-hub-rg/providers/Microsoft.Network/firewallPolicies/azfw-hub-policy/ruleCollectionGroups/DefaultNetworkRuleCollectionGroup",
            "name": "DefaultNetworkRuleCollectionGroup",
            "nat_rule_collection": [],
            "network_rule_collection": [
              {
                "action": "Allow",
                "name": "DefaultNetworkRuleCollection",
                "priority": 200,
                "rule": [
                  {
                    "description": "",
                    "destination_addresses": [
                      "10.10.0.0/16",
                      "10.20.0.0/16"
                    ],
                    "destination_fqdns": [],
                    "destination_ip_groups": [],
                    "destination_ports": [
                      "*"
                    ],
                    "name": "allow-east-west-traffic",
                    "protocols": [
                      "Any"
                    ],
                    "source_addresses": [
                      "10.10.0.0/16",
                      "10.20.0.0/16"
                    ],
                    "source_ip_groups": []
                  }
                ]
              }
            ],
            "priority": 200,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_firewall_policy.azfw_hub_policy",
            "azurerm_resource_group.rg_hub"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "vm_jumpbox_nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/42edd95d-ae8d-41c1-ac55-40bf336687b4/resourceGroups/tf-deploy-hub-rg/providers/Microsoft.Network/networkInterfaces/vm-jumpbox-nic",
            "internal_domain_name_suffix": "ur2aiar0mgeebfjtmgmap5ybce.lx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "ipconfig1",
                "primary": true,
                "private_ip_address": "10.0.100.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/42edd95d-ae8d-41c1-ac55-40bf336687b4/resourceGroups/tf-deploy-hub-rg/providers/Microsoft.Network/virtualNetworks/vnet-hub/subnets/subnet-hub-001"
              }
            ],
            "location": "japaneast",
            "mac_address": "00-22-48-68-BB-FB",
            "name": "vm-jumpbox-nic",
            "private_ip_address": "10.0.100.4",
            "private_ip_addresses": [
              "10.0.100.4"
            ],
            "resource_group_name": "tf-deploy-hub-rg",
            "virtual_machine_id": "/subscriptions/42edd95d-ae8d-41c1-ac55-40bf336687b4/resourceGroups/tf-deploy-hub-rg/providers/Microsoft.Compute/virtualMachines/vm-jumpbox"
          },
          "dependencies": [
            "azurerm_resource_group.rg_hub",
            "azurerm_subnet.hub_subnets",
            "azurerm_virtual_network.hub_vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "vm_spoke001_nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/42edd95d-ae8d-41c1-ac55-40bf336687b4/resourceGroups/tf-deploy-spoke-rg/providers/Microsoft.Network/networkInterfaces/vm-spoke001-nic",
            "internal_domain_name_suffix": "glxawoalfruepnj5qtpmxkkkfd.lx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "ipconfig1",
                "primary": true,
                "private_ip_address": "10.10.0.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/42edd95d-ae8d-41c1-ac55-40bf336687b4/resourceGroups/tf-deploy-spoke-rg/providers/Microsoft.Network/publicIPAddresses/vm-spoke001-pip",
                "subnet_id": "/subscriptions/42edd95d-ae8d-41c1-ac55-40bf336687b4/resourceGroups/tf-deploy-spoke-rg/providers/Microsoft.Network/virtualNetworks/vnet-spoke-001/subnets/subnet-1"
              }
            ],
            "location": "japaneast",
            "mac_address": "00-22-48-69-6A-9D",
            "name": "vm-spoke001-nic",
            "private_ip_address": "10.10.0.4",
            "private_ip_addresses": [
              "10.10.0.4"
            ],
            "resource_group_name": "tf-deploy-spoke-rg",
            "virtual_machine_id": "/subscriptions/42edd95d-ae8d-41c1-ac55-40bf336687b4/resourceGroups/tf-deploy-spoke-rg/providers/Microsoft.Compute/virtualMachines/vm-spoke001"
          },
          "dependencies": [
            "azurerm_public_ip.vm_spoke001_pip",
            "azurerm_resource_group.rg_spoke",
            "azurerm_subnet.spoke_001_subnets",
            "azurerm_virtual_network.spoke_vnet_001"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "vm_spoke002_nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/42edd95d-ae8d-41c1-ac55-40bf336687b4/resourceGroups/tf-deploy-spoke-rg/providers/Microsoft.Network/networkInterfaces/vm-spoke002-nic",
            "internal_domain_name_suffix": "34skqsowz2fexcxt5h2ppfrp4h.lx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "ipconfig1",
                "primary": true,
                "private_ip_address": "10.20.0.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/42edd95d-ae8d-41c1-ac55-40bf336687b4/resourceGroups/tf-deploy-spoke-rg/providers/Microsoft.Network/publicIPAddresses/vm-spoke002-pip",
                "subnet_id": "/subscriptions/42edd95d-ae8d-41c1-ac55-40bf336687b4/resourceGroups/tf-deploy-spoke-rg/providers/Microsoft.Network/virtualNetworks/vnet-spoke-002/subnets/subnet-1"
              }
            ],
            "location": "japaneast",
            "mac_address": "60-45-BD-66-B2-03",
            "name": "vm-spoke002-nic",
            "private_ip_address": "10.20.0.4",
            "private_ip_addresses": [
              "10.20.0.4"
            ],
            "resource_group_name": "tf-deploy-spoke-rg",
            "virtual_machine_id": "/subscriptions/42edd95d-ae8d-41c1-ac55-40bf336687b4/resourceGroups/tf-deploy-spoke-rg/providers/Microsoft.Compute/virtualMachines/vm-spoke002"
          },
          "dependencies": [
            "azurerm_public_ip.vm_spoke002_pip",
            "azurerm_resource_group.rg_spoke",
            "azurerm_subnet.spoke_002_subnets",
            "azurerm_virtual_network.spoke_vnet_002"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "nsg_hub",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/42edd95d-ae8d-41c1-ac55-40bf336687b4/resourceGroups/tf-deploy-hub-rg/providers/Microsoft.Network/networkSecurityGroups/nsg-hub",
            "location": "japaneast",
            "name": "nsg-hub",
            "resource_group_name": "tf-deploy-hub-rg",
            "security_rule": [],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.rg_hub"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "nsg_spoke001",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/42edd95d-ae8d-41c1-ac55-40bf336687b4/resourceGroups/tf-deploy-spoke-rg/providers/Microsoft.Network/networkSecurityGroups/nsg-spoke-001",
            "location": "japaneast",
            "name": "nsg-spoke-001",
            "resource_group_name": "tf-deploy-spoke-rg",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "SSH",
                "priority": 1000,
                "protocol": "*",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.rg_spoke"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "nsg_spoke002",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/42edd95d-ae8d-41c1-ac55-40bf336687b4/resourceGroups/tf-deploy-spoke-rg/providers/Microsoft.Network/networkSecurityGroups/nsg-spoke-002",
            "location": "japaneast",
            "name": "nsg-spoke-002",
            "resource_group_name": "tf-deploy-spoke-rg",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "SSH",
                "priority": 1000,
                "protocol": "*",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.rg_spoke"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "azfw_hub_pip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/42edd95d-ae8d-41c1-ac55-40bf336687b4/resourceGroups/tf-deploy-hub-rg/providers/Microsoft.Network/publicIPAddresses/azfw-hub-pip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.222.17.98",
            "ip_version": "IPv4",
            "location": "japaneast",
            "name": "azfw-hub-pip",
            "resource_group_name": "tf-deploy-hub-rg",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_resource_group.rg_hub"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "vm_spoke001_pip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/42edd95d-ae8d-41c1-ac55-40bf336687b4/resourceGroups/tf-deploy-spoke-rg/providers/Microsoft.Network/publicIPAddresses/vm-spoke001-pip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.222.22.234",
            "ip_version": "IPv4",
            "location": "japaneast",
            "name": "vm-spoke001-pip",
            "resource_group_name": "tf-deploy-spoke-rg",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_resource_group.rg_spoke"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "vm_spoke002_pip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/42edd95d-ae8d-41c1-ac55-40bf336687b4/resourceGroups/tf-deploy-spoke-rg/providers/Microsoft.Network/publicIPAddresses/vm-spoke002-pip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.222.16.226",
            "ip_version": "IPv4",
            "location": "japaneast",
            "name": "vm-spoke002-pip",
            "resource_group_name": "tf-deploy-spoke-rg",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_resource_group.rg_spoke"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_route_table",
      "name": "spoke001_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "disable_bgp_route_propagation": false,
            "id": "/subscriptions/42edd95d-ae8d-41c1-ac55-40bf336687b4/resourceGroups/tf-deploy-spoke-rg/providers/Microsoft.Network/routeTables/rt-spoke001",
            "location": "japaneast",
            "name": "rt-spoke001",
            "resource_group_name": "tf-deploy-spoke-rg",
            "route": [
              {
                "address_prefix": "0.0.0.0/0",
                "name": "defaultRoute",
                "next_hop_in_ip_address": "10.0.0.4",
                "next_hop_type": "VirtualAppliance"
              }
            ],
            "subnets": [
              "/subscriptions/42edd95d-ae8d-41c1-ac55-40bf336687b4/resourceGroups/tf-deploy-spoke-rg/providers/Microsoft.Network/virtualNetworks/vnet-spoke-001/subnets/subnet-1",
              "/subscriptions/42edd95d-ae8d-41c1-ac55-40bf336687b4/resourceGroups/tf-deploy-spoke-rg/providers/Microsoft.Network/virtualNetworks/vnet-spoke-001/subnets/subnet-2"
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_firewall.azfw_hub",
            "azurerm_firewall_policy.azfw_hub_policy",
            "azurerm_public_ip.azfw_hub_pip",
            "azurerm_resource_group.rg_hub",
            "azurerm_resource_group.rg_spoke",
            "azurerm_subnet.hub_subnets",
            "azurerm_virtual_network.hub_vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_route_table",
      "name": "spoke002_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "disable_bgp_route_propagation": false,
            "id": "/subscriptions/42edd95d-ae8d-41c1-ac55-40bf336687b4/resourceGroups/tf-deploy-spoke-rg/providers/Microsoft.Network/routeTables/rt-spoke002",
            "location": "japaneast",
            "name": "rt-spoke002",
            "resource_group_name": "tf-deploy-spoke-rg",
            "route": [
              {
                "address_prefix": "0.0.0.0/0",
                "name": "defaultRoute",
                "next_hop_in_ip_address": "10.0.0.4",
                "next_hop_type": "VirtualAppliance"
              }
            ],
            "subnets": [
              "/subscriptions/42edd95d-ae8d-41c1-ac55-40bf336687b4/resourceGroups/tf-deploy-spoke-rg/providers/Microsoft.Network/virtualNetworks/vnet-spoke-002/subnets/subnet-1",
              "/subscriptions/42edd95d-ae8d-41c1-ac55-40bf336687b4/resourceGroups/tf-deploy-spoke-rg/providers/Microsoft.Network/virtualNetworks/vnet-spoke-002/subnets/subnet-2"
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_firewall.azfw_hub",
            "azurerm_firewall_policy.azfw_hub_policy",
            "azurerm_public_ip.azfw_hub_pip",
            "azurerm_resource_group.rg_hub",
            "azurerm_resource_group.rg_spoke",
            "azurerm_subnet.hub_subnets",
            "azurerm_virtual_network.hub_vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "hub_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "AzureFirewallSubnet",
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.0.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/42edd95d-ae8d-41c1-ac55-40bf336687b4/resourceGroups/tf-deploy-hub-rg/providers/Microsoft.Network/virtualNetworks/vnet-hub/subnets/AzureFirewallSubnet",
            "name": "AzureFirewallSubnet",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "tf-deploy-hub-rg",
            "virtual_network_name": "vnet-hub"
          },
          "dependencies": [
            "azurerm_resource_group.rg_hub",
            "azurerm_virtual_network.hub_vnet"
          ]
        },
        {
          "index_key": "subnet-hub-001",
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.100.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/42edd95d-ae8d-41c1-ac55-40bf336687b4/resourceGroups/tf-deploy-hub-rg/providers/Microsoft.Network/virtualNetworks/vnet-hub/subnets/subnet-hub-001",
            "name": "subnet-hub-001",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "tf-deploy-hub-rg",
            "virtual_network_name": "vnet-hub"
          },
          "dependencies": [
            "azurerm_resource_group.rg_hub",
            "azurerm_virtual_network.hub_vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "spoke_001_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.10.0.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/42edd95d-ae8d-41c1-ac55-40bf336687b4/resourceGroups/tf-deploy-spoke-rg/providers/Microsoft.Network/virtualNetworks/vnet-spoke-001/subnets/subnet-1",
            "name": "subnet-1",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "tf-deploy-spoke-rg",
            "virtual_network_name": "vnet-spoke-001"
          },
          "dependencies": [
            "azurerm_resource_group.rg_spoke",
            "azurerm_virtual_network.spoke_vnet_001"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.10.1.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/42edd95d-ae8d-41c1-ac55-40bf336687b4/resourceGroups/tf-deploy-spoke-rg/providers/Microsoft.Network/virtualNetworks/vnet-spoke-001/subnets/subnet-2",
            "name": "subnet-2",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "tf-deploy-spoke-rg",
            "virtual_network_name": "vnet-spoke-001"
          },
          "dependencies": [
            "azurerm_resource_group.rg_spoke",
            "azurerm_virtual_network.spoke_vnet_001"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "spoke_002_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.20.0.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/42edd95d-ae8d-41c1-ac55-40bf336687b4/resourceGroups/tf-deploy-spoke-rg/providers/Microsoft.Network/virtualNetworks/vnet-spoke-002/subnets/subnet-1",
            "name": "subnet-1",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "tf-deploy-spoke-rg",
            "virtual_network_name": "vnet-spoke-002"
          },
          "dependencies": [
            "azurerm_resource_group.rg_spoke",
            "azurerm_virtual_network.spoke_vnet_002"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.20.1.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/42edd95d-ae8d-41c1-ac55-40bf336687b4/resourceGroups/tf-deploy-spoke-rg/providers/Microsoft.Network/virtualNetworks/vnet-spoke-002/subnets/subnet-2",
            "name": "subnet-2",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "tf-deploy-spoke-rg",
            "virtual_network_name": "vnet-spoke-002"
          },
          "dependencies": [
            "azurerm_resource_group.rg_spoke",
            "azurerm_virtual_network.spoke_vnet_002"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "nsg_hub_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/42edd95d-ae8d-41c1-ac55-40bf336687b4/resourceGroups/tf-deploy-hub-rg/providers/Microsoft.Network/virtualNetworks/vnet-hub/subnets/subnet-hub-001",
            "network_security_group_id": "/subscriptions/42edd95d-ae8d-41c1-ac55-40bf336687b4/resourceGroups/tf-deploy-hub-rg/providers/Microsoft.Network/networkSecurityGroups/nsg-hub",
            "subnet_id": "/subscriptions/42edd95d-ae8d-41c1-ac55-40bf336687b4/resourceGroups/tf-deploy-hub-rg/providers/Microsoft.Network/virtualNetworks/vnet-hub/subnets/subnet-hub-001"
          },
          "dependencies": [
            "azurerm_network_security_group.nsg_hub",
            "azurerm_resource_group.rg_hub",
            "azurerm_subnet.hub_subnets",
            "azurerm_virtual_network.hub_vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "nsg_spoke001_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/42edd95d-ae8d-41c1-ac55-40bf336687b4/resourceGroups/tf-deploy-spoke-rg/providers/Microsoft.Network/virtualNetworks/vnet-spoke-001/subnets/subnet-1",
            "network_security_group_id": "/subscriptions/42edd95d-ae8d-41c1-ac55-40bf336687b4/resourceGroups/tf-deploy-spoke-rg/providers/Microsoft.Network/networkSecurityGroups/nsg-spoke-001",
            "subnet_id": "/subscriptions/42edd95d-ae8d-41c1-ac55-40bf336687b4/resourceGroups/tf-deploy-spoke-rg/providers/Microsoft.Network/virtualNetworks/vnet-spoke-001/subnets/subnet-1"
          },
          "dependencies": [
            "azurerm_network_security_group.nsg_spoke001",
            "azurerm_resource_group.rg_spoke",
            "azurerm_subnet.spoke_001_subnets",
            "azurerm_virtual_network.spoke_vnet_001"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/42edd95d-ae8d-41c1-ac55-40bf336687b4/resourceGroups/tf-deploy-spoke-rg/providers/Microsoft.Network/virtualNetworks/vnet-spoke-001/subnets/subnet-2",
            "network_security_group_id": "/subscriptions/42edd95d-ae8d-41c1-ac55-40bf336687b4/resourceGroups/tf-deploy-spoke-rg/providers/Microsoft.Network/networkSecurityGroups/nsg-spoke-001",
            "subnet_id": "/subscriptions/42edd95d-ae8d-41c1-ac55-40bf336687b4/resourceGroups/tf-deploy-spoke-rg/providers/Microsoft.Network/virtualNetworks/vnet-spoke-001/subnets/subnet-2"
          },
          "dependencies": [
            "azurerm_network_security_group.nsg_spoke001",
            "azurerm_resource_group.rg_spoke",
            "azurerm_subnet.spoke_001_subnets",
            "azurerm_virtual_network.spoke_vnet_001"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "nsg_spoke002_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/42edd95d-ae8d-41c1-ac55-40bf336687b4/resourceGroups/tf-deploy-spoke-rg/providers/Microsoft.Network/virtualNetworks/vnet-spoke-002/subnets/subnet-1",
            "network_security_group_id": "/subscriptions/42edd95d-ae8d-41c1-ac55-40bf336687b4/resourceGroups/tf-deploy-spoke-rg/providers/Microsoft.Network/networkSecurityGroups/nsg-spoke-002",
            "subnet_id": "/subscriptions/42edd95d-ae8d-41c1-ac55-40bf336687b4/resourceGroups/tf-deploy-spoke-rg/providers/Microsoft.Network/virtualNetworks/vnet-spoke-002/subnets/subnet-1"
          },
          "dependencies": [
            "azurerm_network_security_group.nsg_spoke002",
            "azurerm_resource_group.rg_spoke",
            "azurerm_subnet.spoke_002_subnets",
            "azurerm_virtual_network.spoke_vnet_002"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/42edd95d-ae8d-41c1-ac55-40bf336687b4/resourceGroups/tf-deploy-spoke-rg/providers/Microsoft.Network/virtualNetworks/vnet-spoke-002/subnets/subnet-2",
            "network_security_group_id": "/subscriptions/42edd95d-ae8d-41c1-ac55-40bf336687b4/resourceGroups/tf-deploy-spoke-rg/providers/Microsoft.Network/networkSecurityGroups/nsg-spoke-002",
            "subnet_id": "/subscriptions/42edd95d-ae8d-41c1-ac55-40bf336687b4/resourceGroups/tf-deploy-spoke-rg/providers/Microsoft.Network/virtualNetworks/vnet-spoke-002/subnets/subnet-2"
          },
          "dependencies": [
            "azurerm_network_security_group.nsg_spoke002",
            "azurerm_resource_group.rg_spoke",
            "azurerm_subnet.spoke_002_subnets",
            "azurerm_virtual_network.spoke_vnet_002"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_route_table_association",
      "name": "spoken001_rt_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/42edd95d-ae8d-41c1-ac55-40bf336687b4/resourceGroups/tf-deploy-spoke-rg/providers/Microsoft.Network/virtualNetworks/vnet-spoke-001/subnets/subnet-1",
            "route_table_id": "/subscriptions/42edd95d-ae8d-41c1-ac55-40bf336687b4/resourceGroups/tf-deploy-spoke-rg/providers/Microsoft.Network/routeTables/rt-spoke001",
            "subnet_id": "/subscriptions/42edd95d-ae8d-41c1-ac55-40bf336687b4/resourceGroups/tf-deploy-spoke-rg/providers/Microsoft.Network/virtualNetworks/vnet-spoke-001/subnets/subnet-1"
          },
          "dependencies": [
            "azurerm_firewall.azfw_hub",
            "azurerm_firewall_policy.azfw_hub_policy",
            "azurerm_public_ip.azfw_hub_pip",
            "azurerm_resource_group.rg_hub",
            "azurerm_resource_group.rg_spoke",
            "azurerm_route_table.spoke001_rt",
            "azurerm_subnet.hub_subnets",
            "azurerm_subnet.spoke_001_subnets",
            "azurerm_virtual_network.hub_vnet",
            "azurerm_virtual_network.spoke_vnet_001"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/42edd95d-ae8d-41c1-ac55-40bf336687b4/resourceGroups/tf-deploy-spoke-rg/providers/Microsoft.Network/virtualNetworks/vnet-spoke-001/subnets/subnet-2",
            "route_table_id": "/subscriptions/42edd95d-ae8d-41c1-ac55-40bf336687b4/resourceGroups/tf-deploy-spoke-rg/providers/Microsoft.Network/routeTables/rt-spoke001",
            "subnet_id": "/subscriptions/42edd95d-ae8d-41c1-ac55-40bf336687b4/resourceGroups/tf-deploy-spoke-rg/providers/Microsoft.Network/virtualNetworks/vnet-spoke-001/subnets/subnet-2"
          },
          "dependencies": [
            "azurerm_firewall.azfw_hub",
            "azurerm_firewall_policy.azfw_hub_policy",
            "azurerm_public_ip.azfw_hub_pip",
            "azurerm_resource_group.rg_hub",
            "azurerm_resource_group.rg_spoke",
            "azurerm_route_table.spoke001_rt",
            "azurerm_subnet.hub_subnets",
            "azurerm_subnet.spoke_001_subnets",
            "azurerm_virtual_network.hub_vnet",
            "azurerm_virtual_network.spoke_vnet_001"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_route_table_association",
      "name": "spoken002_rt_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/42edd95d-ae8d-41c1-ac55-40bf336687b4/resourceGroups/tf-deploy-spoke-rg/providers/Microsoft.Network/virtualNetworks/vnet-spoke-002/subnets/subnet-1",
            "route_table_id": "/subscriptions/42edd95d-ae8d-41c1-ac55-40bf336687b4/resourceGroups/tf-deploy-spoke-rg/providers/Microsoft.Network/routeTables/rt-spoke002",
            "subnet_id": "/subscriptions/42edd95d-ae8d-41c1-ac55-40bf336687b4/resourceGroups/tf-deploy-spoke-rg/providers/Microsoft.Network/virtualNetworks/vnet-spoke-002/subnets/subnet-1"
          },
          "dependencies": [
            "azurerm_firewall.azfw_hub",
            "azurerm_firewall_policy.azfw_hub_policy",
            "azurerm_public_ip.azfw_hub_pip",
            "azurerm_resource_group.rg_hub",
            "azurerm_resource_group.rg_spoke",
            "azurerm_route_table.spoke002_rt",
            "azurerm_subnet.hub_subnets",
            "azurerm_subnet.spoke_002_subnets",
            "azurerm_virtual_network.hub_vnet",
            "azurerm_virtual_network.spoke_vnet_002"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/42edd95d-ae8d-41c1-ac55-40bf336687b4/resourceGroups/tf-deploy-spoke-rg/providers/Microsoft.Network/virtualNetworks/vnet-spoke-002/subnets/subnet-2",
            "route_table_id": "/subscriptions/42edd95d-ae8d-41c1-ac55-40bf336687b4/resourceGroups/tf-deploy-spoke-rg/providers/Microsoft.Network/routeTables/rt-spoke002",
            "subnet_id": "/subscriptions/42edd95d-ae8d-41c1-ac55-40bf336687b4/resourceGroups/tf-deploy-spoke-rg/providers/Microsoft.Network/virtualNetworks/vnet-spoke-002/subnets/subnet-2"
          },
          "dependencies": [
            "azurerm_firewall.azfw_hub",
            "azurerm_firewall_policy.azfw_hub_policy",
            "azurerm_public_ip.azfw_hub_pip",
            "azurerm_resource_group.rg_hub",
            "azurerm_resource_group.rg_spoke",
            "azurerm_route_table.spoke002_rt",
            "azurerm_subnet.hub_subnets",
            "azurerm_subnet.spoke_002_subnets",
            "azurerm_virtual_network.hub_vnet",
            "azurerm_virtual_network.spoke_vnet_002"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "hub_vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "020478a4-613a-4088-9533-619807ff0114",
            "id": "/subscriptions/42edd95d-ae8d-41c1-ac55-40bf336687b4/resourceGroups/tf-deploy-hub-rg/providers/Microsoft.Network/virtualNetworks/vnet-hub",
            "location": "japaneast",
            "name": "vnet-hub",
            "resource_group_name": "tf-deploy-hub-rg",
            "subnet": [
              {
                "address_prefix": "10.0.0.0/24",
                "id": "/subscriptions/42edd95d-ae8d-41c1-ac55-40bf336687b4/resourceGroups/tf-deploy-hub-rg/providers/Microsoft.Network/virtualNetworks/vnet-hub/subnets/AzureFirewallSubnet",
                "name": "AzureFirewallSubnet"
              },
              {
                "address_prefix": "10.0.100.0/24",
                "id": "/subscriptions/42edd95d-ae8d-41c1-ac55-40bf336687b4/resourceGroups/tf-deploy-hub-rg/providers/Microsoft.Network/virtualNetworks/vnet-hub/subnets/subnet-hub-001",
                "name": "subnet-hub-001",
                "security_group": "/subscriptions/42edd95d-ae8d-41c1-ac55-40bf336687b4/resourceGroups/tf-deploy-hub-rg/providers/Microsoft.Network/networkSecurityGroups/nsg-hub"
              }
            ]
          },
          "dependencies": [
            "azurerm_resource_group.rg_hub"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "spoke_vnet_001",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.10.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "380bee32-2c0b-4768-b53f-84decba94a2b",
            "id": "/subscriptions/42edd95d-ae8d-41c1-ac55-40bf336687b4/resourceGroups/tf-deploy-spoke-rg/providers/Microsoft.Network/virtualNetworks/vnet-spoke-001",
            "location": "japaneast",
            "name": "vnet-spoke-001",
            "resource_group_name": "tf-deploy-spoke-rg",
            "subnet": [
              {
                "address_prefix": "10.10.0.0/24",
                "id": "/subscriptions/42edd95d-ae8d-41c1-ac55-40bf336687b4/resourceGroups/tf-deploy-spoke-rg/providers/Microsoft.Network/virtualNetworks/vnet-spoke-001/subnets/subnet-1",
                "name": "subnet-1",
                "security_group": "/subscriptions/42edd95d-ae8d-41c1-ac55-40bf336687b4/resourceGroups/tf-deploy-spoke-rg/providers/Microsoft.Network/networkSecurityGroups/nsg-spoke-001"
              },
              {
                "address_prefix": "10.10.1.0/24",
                "id": "/subscriptions/42edd95d-ae8d-41c1-ac55-40bf336687b4/resourceGroups/tf-deploy-spoke-rg/providers/Microsoft.Network/virtualNetworks/vnet-spoke-001/subnets/subnet-2",
                "name": "subnet-2",
                "security_group": "/subscriptions/42edd95d-ae8d-41c1-ac55-40bf336687b4/resourceGroups/tf-deploy-spoke-rg/providers/Microsoft.Network/networkSecurityGroups/nsg-spoke-001"
              }
            ]
          },
          "dependencies": [
            "azurerm_resource_group.rg_spoke"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "spoke_vnet_002",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.20.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "49a8a4ef-cfd6-4b0a-8af3-f9f8f7962ff7",
            "id": "/subscriptions/42edd95d-ae8d-41c1-ac55-40bf336687b4/resourceGroups/tf-deploy-spoke-rg/providers/Microsoft.Network/virtualNetworks/vnet-spoke-002",
            "location": "japaneast",
            "name": "vnet-spoke-002",
            "resource_group_name": "tf-deploy-spoke-rg",
            "subnet": [
              {
                "address_prefix": "10.20.0.0/24",
                "id": "/subscriptions/42edd95d-ae8d-41c1-ac55-40bf336687b4/resourceGroups/tf-deploy-spoke-rg/providers/Microsoft.Network/virtualNetworks/vnet-spoke-002/subnets/subnet-1",
                "name": "subnet-1",
                "security_group": "/subscriptions/42edd95d-ae8d-41c1-ac55-40bf336687b4/resourceGroups/tf-deploy-spoke-rg/providers/Microsoft.Network/networkSecurityGroups/nsg-spoke-002"
              },
              {
                "address_prefix": "10.20.1.0/24",
                "id": "/subscriptions/42edd95d-ae8d-41c1-ac55-40bf336687b4/resourceGroups/tf-deploy-spoke-rg/providers/Microsoft.Network/virtualNetworks/vnet-spoke-002/subnets/subnet-2",
                "name": "subnet-2",
                "security_group": "/subscriptions/42edd95d-ae8d-41c1-ac55-40bf336687b4/resourceGroups/tf-deploy-spoke-rg/providers/Microsoft.Network/networkSecurityGroups/nsg-spoke-002"
              }
            ]
          },
          "dependencies": [
            "azurerm_resource_group.rg_spoke"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network_peering",
      "name": "hub_to_spoke001",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allow_forwarded_traffic": true,
            "allow_gateway_transit": false,
            "allow_virtual_network_access": true,
            "id": "/subscriptions/42edd95d-ae8d-41c1-ac55-40bf336687b4/resourceGroups/tf-deploy-hub-rg/providers/Microsoft.Network/virtualNetworks/vnet-hub/virtualNetworkPeerings/hub-to-spoke001",
            "name": "hub-to-spoke001",
            "remote_virtual_network_id": "/subscriptions/42edd95d-ae8d-41c1-ac55-40bf336687b4/resourceGroups/tf-deploy-spoke-rg/providers/Microsoft.Network/virtualNetworks/vnet-spoke-001",
            "resource_group_name": "tf-deploy-hub-rg",
            "use_remote_gateways": false,
            "virtual_network_name": "vnet-hub"
          },
          "dependencies": [
            "azurerm_resource_group.rg_hub",
            "azurerm_resource_group.rg_spoke",
            "azurerm_virtual_network.hub_vnet",
            "azurerm_virtual_network.spoke_vnet_001"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network_peering",
      "name": "hub_to_spoke002",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allow_forwarded_traffic": true,
            "allow_gateway_transit": false,
            "allow_virtual_network_access": true,
            "id": "/subscriptions/42edd95d-ae8d-41c1-ac55-40bf336687b4/resourceGroups/tf-deploy-hub-rg/providers/Microsoft.Network/virtualNetworks/vnet-hub/virtualNetworkPeerings/hub-to-spoke002",
            "name": "hub-to-spoke002",
            "remote_virtual_network_id": "/subscriptions/42edd95d-ae8d-41c1-ac55-40bf336687b4/resourceGroups/tf-deploy-spoke-rg/providers/Microsoft.Network/virtualNetworks/vnet-spoke-002",
            "resource_group_name": "tf-deploy-hub-rg",
            "use_remote_gateways": false,
            "virtual_network_name": "vnet-hub"
          },
          "dependencies": [
            "azurerm_resource_group.rg_hub",
            "azurerm_resource_group.rg_spoke",
            "azurerm_virtual_network.hub_vnet",
            "azurerm_virtual_network.spoke_vnet_002"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network_peering",
      "name": "spoke001_to_hub",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allow_forwarded_traffic": true,
            "allow_gateway_transit": false,
            "allow_virtual_network_access": true,
            "id": "/subscriptions/42edd95d-ae8d-41c1-ac55-40bf336687b4/resourceGroups/tf-deploy-spoke-rg/providers/Microsoft.Network/virtualNetworks/vnet-spoke-001/virtualNetworkPeerings/spoke001-to-hub",
            "name": "spoke001-to-hub",
            "remote_virtual_network_id": "/subscriptions/42edd95d-ae8d-41c1-ac55-40bf336687b4/resourceGroups/tf-deploy-hub-rg/providers/Microsoft.Network/virtualNetworks/vnet-hub",
            "resource_group_name": "tf-deploy-spoke-rg",
            "use_remote_gateways": false,
            "virtual_network_name": "vnet-spoke-001"
          },
          "dependencies": [
            "azurerm_resource_group.rg_hub",
            "azurerm_resource_group.rg_spoke",
            "azurerm_virtual_network.hub_vnet",
            "azurerm_virtual_network.spoke_vnet_001"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network_peering",
      "name": "spoke002_to_hub",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allow_forwarded_traffic": true,
            "allow_gateway_transit": false,
            "allow_virtual_network_access": true,
            "id": "/subscriptions/42edd95d-ae8d-41c1-ac55-40bf336687b4/resourceGroups/tf-deploy-spoke-rg/providers/Microsoft.Network/virtualNetworks/vnet-spoke-002/virtualNetworkPeerings/spoke002-to-hub",
            "name": "spoke002-to-hub",
            "remote_virtual_network_id": "/subscriptions/42edd95d-ae8d-41c1-ac55-40bf336687b4/resourceGroups/tf-deploy-hub-rg/providers/Microsoft.Network/virtualNetworks/vnet-hub",
            "resource_group_name": "tf-deploy-spoke-rg",
            "use_remote_gateways": false,
            "virtual_network_name": "vnet-spoke-002"
          },
          "dependencies": [
            "azurerm_resource_group.rg_hub",
            "azurerm_resource_group.rg_spoke",
            "azurerm_virtual_network.hub_vnet",
            "azurerm_virtual_network.spoke_vnet_002"
          ]
        }
      ]
    }
  ]
}